--- a/public/modules/users/views/settings/edit-profile.client.view.html
+++ b/public/modules/users/views/settings/edit-profile.client.view.html
@@ -19,6 +19,14 @@
 					<label for="username">Username</label>
 					<input type="text" id="username" name="username" class="form-control" data-ng-model="user.username" placeholder="Username">
 				</div>
+				<div class="form-group">
+					<label for="areacode">Location (Area Code)</label>
+					<input type="areacode" id="areacode" name="areacode" class="form-control" data-ng-model="user.areacode" placeholder="Area Code">
+				</div>
+				<div class="form-group">
+					<label for="distance">Desired Locale (Miles)</label>
+					<input type="distance" id="distance" name="distance" class="form-control" data-ng-model="user.distance" placeholder="# miles">
+				</div>
 				<div class="text-center form-group">
 					<button type="submit" class="btn btn-large btn-primary">Save Profile</button>
 				</div>
