--- a/public/modules/users/views/integrations.client.view.html
+++ b/public/modules/users/views/integrations.client.view.html
@@ -1,3 +1,19 @@
 <section data-ng-controller="IntegrationsController">
-	This is the Integrations
+
+        <div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
+            <form data-ng-submit="getOAuthToken()" class="signin form-horizontal" autocomplete="off">
+                <fieldset>
+
+                    <div class="text-center form-group">
+                        <button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;
+                        <a href="/#!/signup">Sign up</a>
+                    </div>
+
+                    <div data-ng-show="error" class="text-center text-danger">
+                        <strong data-ng-bind="error"></strong>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+
 </section>
