--- a/public/modules/users/views/integrations.client.view.html
+++ b/public/modules/users/views/integrations.client.view.html
@@ -1,3 +1,7 @@
 <section data-ng-controller="IntegrationsController">
-	This is the Integrations
+
+  <p>Hello!</p>
+  <a href="/auth/soundcloud" id="signin-soundcloud" class="connect">Connect with SoundCloud</a>
+  <p>Hello, your name is <span id="username"></span></p>
+
 </section>
