Updated text on the main page
Added music profile icons at bottom of main page

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -2,18 +2,26 @@
     <div class="row" style="margin-top: 200px" data-ng-hide="authentication.user">
         <div class="col-md-6 col-md-6-offset" style="padding-top: 5px">
             <h1><strong>Never miss another show.</strong></h1>
-            <p>Austin kitsch tousled Schlitz, hoodie flannel try-hard tattooed deep v kale chips Vice</p>
-            <p>Roof party typewriter single-origin coffee, lomo 90's pour-over craft beer </p>
-            <p>Kickstart seitan YOLO Blue Bottle try-hard. Yr church-key Wes Anderson, lo-fi</p>
-            <p>distillery single-origin coffee roof party chillwave cred.</p>
+            <p>Get upcoming concert info about your favorite bands from your favorite online music profiles
+            like SoundCloud, Spotify, Grooveshark, last.fm, and more.</p>
+            <p>Manage your artists and choose which tours you want to be updated on the most frequently</p>
+            <p>Choose to receive emails, texts, or both as frequently as you want and as close to the live shows as you want.</p>
         </div>
         <div class="col-md-6 col-md-6-offset">
             <div>
-                <h2><small>Thundercats iPhone hashtag ennui pickled gentrify actually bicycle rights trust fund</small></h2>
+                <h1><strong>Bandwagon</strong></h1>
                 <a style="margin-left: 75px; margin-top: 36px" href="/#!/signup" class="btn btn-primary btn-lg" ui-route="/signup" ng-class="{active: $uiRoute}">Sign up</a>
                 <a style="margin-left: 75px; margin-top: 36px" href="/#!/signin" class="btn btn-primary btn-lg" ui-route="/signin" ng-class="{active: $uiRoute}">Sign in</a>
             </div>
         </div>
+    </div>
+    <p></p>
+    <div>
+        <img src="http://icons.iconarchive.com/icons/danleech/simple/512/soundcloud-icon.png" width="200" height="200">
+        <img src="http://cdn.androidpolice.com/wp-content/uploads/2012/08/nexusae0_146.png" width="200" height="200">
+        <a href="http://imgur.com/OxndiqI"><img src="http://i.imgur.com/OxndiqI.png" title="source: imgur.com" width="200" height="200"/></a>
+        <a href="http://imgur.com/uxwZikY"><img src="http://i.imgur.com/uxwZikY.png" title="source: imgur.com" width="200" height="200"/></a>
+        <a href="http://imgur.com/EXP9OX1"><img src="http://i.imgur.com/EXP9OX1.png" title="source: imgur.com" width="200" height="200"/></a>
     </div>
 
 
