--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="HomeController">
-    <div class="row" style="margin-top: 200px" data-ng-hide="authentication.user">
+    <div class="row" style="margin-top: 150px" data-ng-hide="authentication.user">
         <div class="col-md-6 col-md-6-offset" style="padding-top: 5px">
             <h1><strong>Never miss another show.</strong></h1>
             <p>Get upcoming concert info about your favorite bands from your favorite online music profiles
@@ -9,7 +9,7 @@
         </div>
         <div class="col-md-6 col-md-6-offset">
             <div>
-                <h1><strong>Bandwagon</strong></h1>
+                <h1><strong>Jump on the Bandwagon</strong></h1>
                 <a style="margin-left: 75px; margin-top: 36px" href="/#!/signup" class="btn btn-primary btn-lg" ui-route="/signup" ng-class="{active: $uiRoute}">Sign up</a>
                 <a style="margin-left: 75px; margin-top: 36px" href="/#!/signin" class="btn btn-primary btn-lg" ui-route="/signin" ng-class="{active: $uiRoute}">Sign in</a>
             </div>
