--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -17,11 +17,12 @@
     </div>
     <p></p>
     <div>
-        <img src="http://icons.iconarchive.com/icons/danleech/simple/512/soundcloud-icon.png" width="200" height="200">
-        <img src="http://cdn.androidpolice.com/wp-content/uploads/2012/08/nexusae0_146.png" width="200" height="200">
-        <a href="http://imgur.com/OxndiqI"><img src="http://i.imgur.com/OxndiqI.png" title="source: imgur.com" width="200" height="200"/></a>
-        <a href="http://imgur.com/uxwZikY"><img src="http://i.imgur.com/uxwZikY.png" title="source: imgur.com" width="200" height="200"/></a>
-        <a href="http://imgur.com/EXP9OX1"><img src="http://i.imgur.com/EXP9OX1.png" title="source: imgur.com" width="200" height="200"/></a>
+      <a href="/auth/soundcloud" data-ng-show="authentication.user"><img src="http://icons.iconarchive.com/icons/danleech/simple/512/soundcloud-icon.png" width="200" height="200"></a>
+      <a data-ng-hide="authentication.user"><img src="http://icons.iconarchive.com/icons/danleech/simple/512/soundcloud-icon.png" width="200" height="200"></a>
+      <img src="http://cdn.androidpolice.com/wp-content/uploads/2012/08/nexusae0_146.png" width="200" height="200">
+      <a href="http://imgur.com/OxndiqI"><img src="http://i.imgur.com/OxndiqI.png" title="source: imgur.com" width="200" height="200"/></a>
+      <a href="http://imgur.com/uxwZikY"><img src="http://i.imgur.com/uxwZikY.png" title="source: imgur.com" width="200" height="200"/></a>
+      <a href="http://imgur.com/EXP9OX1"><img src="http://i.imgur.com/EXP9OX1.png" title="source: imgur.com" width="200" height="200"/></a>
     </div>
 
 
