--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -17,12 +17,11 @@
     </div>
     <p></p>
     <div>
-        <a href="/auth/soundcloud" data-ng-show="authentication.user"><img src="http://icons.iconarchive.com/icons/danleech/simple/512/soundcloud-icon.png" width="200" height="200"></a >
-        <a data-ng-hide="authentication.user"><img src="http://icons.iconarchive.com/icons/danleech/simple/512/soundcloud-icon.png" width="200" height="200"></a >
-        <img src="http://cdn.androidpolice.com/wp-content/uploads/2012/08/nexusae0_146.png" width="200" height="200">
-        <img src="http://i.imgur.com/OxndiqI.png" width="200" height="200">
-        <img src="http://i.imgur.com/uxwZikY.png" width="200" height="200">
-        <img src="http://i.imgur.com/EXP9OX1.png" width="200" height="200">
+        <img src="/modules/users/img/music_buttons/soundcloud.png">
+        <img src="/modules/users/img/music_buttons/grooveshark.png">
+        <img src="/modules/users/img/music_buttons/spotify.png">
+        <img src="/modules/users/img/music_buttons/google_play.png">
+        <img src="/modules/users/img/music_buttons/last_fm.png">
     </div>
 
 
