working artist display after integration

--- a/public/modules/artists/views/artists.client.view.html
+++ b/public/modules/artists/views/artists.client.view.html
@@ -24,7 +24,7 @@
             <h1><small>Artists in your watchlist</small></h1>
             <table>
                 <tr data-ng-repeat="artist in artists">
-                    <td>{{artist.artistName}}</td>
+                    <td>{{artist}}</td>
                 </tr>
             </table>
         </div>
