test commit again for remote branch

--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -4,7 +4,7 @@
             <h1><strong>Never miss another concert.</strong></h1>
             <p>Get upcoming concert info about your favorite bands from your favorite online music profiles
             like SoundCloud, Spotify, Grooveshark, last.fm, and more.</p>
-            <p>Manage your artists and choose which tours you want to be updated on the most frequently</p>
+            <p>Manage your artists and choose which tours you want to be updated about the most frequently</p>
             <!--<p>Choose to receive emails, texts, or both as frequently as you want and as close to the live shows as you want.</p>-->
         </div>
         <div class="col-md-6 col-md-6-offset">
