Increased size of watched artists text by changing table properties and added some more tests, but need to make more complicated ones.

--- a/public/modules/artists/views/artists.client.view.html
+++ b/public/modules/artists/views/artists.client.view.html
@@ -21,8 +21,8 @@
             </form>
         </div>
         <div class="col-md-6 col-md-6-offset" style="padding-left: 100px">
-            <h1><small>Artists in your watchlist</small></h1>
-            <table>
+            <h1><strong>Artists in your watchlist</strong></h1>
+            <table width="10%" border="0" cellspacing="0" cellpadding="3" style="font-size: 24px">
                 <tr data-ng-repeat="artist in artists">
                     <td>{{artist}}</td>
                 </tr>
