Modified gig server model to include users, modified artist view and header

--- a/public/modules/artists/views/artists.client.view.html
+++ b/public/modules/artists/views/artists.client.view.html
@@ -1,7 +1,7 @@
 <section data-ng-controller="ArtistsController">
     <div class="row" style="margin-top: 200px" data-ng-show="authentication.user">
         <div class="col-md-6 col-md-6-offset" style="padding-top: 5px">
-            <h1><strong>Manage artists</strong></h1>
+            <h1><strong>Manage Artists</strong></h1>
             <form name="artistForm" data-ng-submit="add()" class="signin form-horizontal" autocomplete="off">
                 <fieldset>
                     <div class="form-group">
