--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -23,9 +23,16 @@
 				<a ng-switch-default href="/#!/{{item.link}}" data-ng-bind="item.title"></a>
 			</li>
 		</ul>
+	<!--	<a class="navbar-right" href="/#!/gigs" class="navbar-brand"><span style="font-size: 80%">My Calendar</span></a> -->
+	<!--	<a class="navbar-right" href="/#!/artists" class="navbar-brand"><span style="font-size: 80%">My Artists</span></a> -->
 		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
-			<a href="/#!/gigs" class="navbar-brand"><span style="font-size: 80%">My Calendar</span></a>
-			<a href="/#!/artists" class="navbar-brand"><span style="font-size: 80%">My Artists</span></a>
+			<li ui-route="/gigs" ng-class="{active: $uiRoute}">
+				<a href="/#!/gigs">My Calendar</a>
+			</li>
+			<li class="divider-vertical"></li>
+			<li ui-route="/artists" ng-class="{active: $uiRoute}">
+				<a href="/#!/artists">My Artists</a>
+			</li>
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
