--- a/public/modules/users/views/authentication/signup.client.view.html
+++ b/public/modules/users/views/authentication/signup.client.view.html
@@ -20,6 +20,10 @@
 					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
 				</div>
 				<div class="form-group">
+					<label for="location">Location</label>
+					<input type="text" id="location" name="location" class="form-control" data-ng-model="credentials.location" placeholder="City">
+				</div>
+				<div class="form-group">
 					<label for="password">Password</label>
 					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
 				</div>
