--- a/public/modules/users/views/settings/edit-profile.client.view.html
+++ b/public/modules/users/views/settings/edit-profile.client.view.html
@@ -20,12 +20,8 @@
 					<input type="text" id="username" name="username" class="form-control" data-ng-model="user.username" placeholder="Username">
 				</div>
 				<div class="form-group">
-					<label for="areacode">Location (Area Code)</label>
-					<input type="areacode" id="areacode" name="areacode" class="form-control" data-ng-model="user.areacode" placeholder="Area Code">
-				</div>
-				<div class="form-group">
-					<label for="distance">Desired Locale (Miles)</label>
-					<input type="distance" id="distance" name="distance" class="form-control" data-ng-model="user.distance" placeholder="# miles">
+					<label for="location">Location</label>
+					<input type="text" id="location" name="location" class="form-control" data-ng-model="user.location" placeholder="City">
 				</div>
 				<div class="text-center form-group">
 					<button type="submit" class="btn btn-large btn-primary">Save Profile</button>
