added ability to delete a user account

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -47,6 +47,9 @@
 					<li data-ng-show="authentication.user.provider === 'local'">
 						<a href="/#!/settings/password" id="changePassword">Change Password</a>
 					</li>
+					<li>
+						<a id="deleteAccount" href="/#!/settings/deleteAccount">Delete Account</a>
+					</li>
 					<li class="divider"></li>
 					<li>
 						<a id="signout" href="/auth/signout">Signout</a>
