added more tests for deleting account. now, we no longer need to manually delete the ThisNewUser account each time we run the protractor tests so that the test for creating a user will pass

--- a/public/modules/users/views/settings/delete-account.client.view.html
+++ b/public/modules/users/views/settings/delete-account.client.view.html
@@ -3,8 +3,8 @@
 	<div style="width:400px; margin:0 auto;">
 		<p>If you don't think you'll use Bandwagon again, you can have your account permanently deleted. Please keep in mind that you won't be able to reactivate your account or retrieve anything you've added.</p>
 		<div style="margin-left:10%">
-		<a style="margin-top: 25px" href="/#!/gigs" class="btn btn-primary btn-lg">Cancel</a>
-        <a style="margin-left: 25px; margin-top: 25px" href="/auth/deleteAccount" class="btn btn-primary btn-lg">Delete Account</a>
+		<a id="cancelDelete" style="margin-top: 25px" href="/#!/gigs" class="btn btn-primary btn-lg">Cancel</a>
+        <a id="confirmDelete" style="margin-left: 25px; margin-top: 25px" href="/auth/deleteAccount" class="btn btn-primary btn-lg">Delete Account</a>
     	</div>
 	</div>
 </section>
