integrated location determination into calendar view

--- a/public/modules/gigs/views/gigs.client.view.html
+++ b/public/modules/gigs/views/gigs.client.view.html
@@ -14,7 +14,7 @@
 								</div>
 							</div>
 							<div class="media-body" style="padding-left: 15px; padding-top: 14px">
-								<span style="font-weight: 400; font-size: 17px">Andrij Dobriansky{{gig.artist}} &nbsp; - &nbsp; {{gig.name}}</span>
+								<span style="font-weight: 400; font-size: 17px">{{gig.artistName}} &nbsp; - &nbsp; {{gig.name}}</span>
 								<span class="pull-right" style="padding-right: 15px">(calc. dist.)</span>
 								<br>
 								<div style="padding-left: 15px; padding-top: 15px"> <i>in</i> &nbsp; <span style="font-weight: 400">{{gig.venue.city}}, {{gig.venue.region}}</span> &nbsp; <i>at</i> &nbsp; <span style="font-weight: 400">{{gig.venue.name}}</span></div>
